# care-platform-data-vista

./: .gitignore  AI_CONTEXT.md  CODEOWNERS  LICENSE  README.md  Start-Demo.ps1  ai_tools.json  appsettings.json  pyproject.toml
CarePlatform.Data.CPRS/: CarePlatform.Data.CPRS.csproj  ECConfiguration.cs  appsettings.json
CarePlatform.Models/: CarePlatform.Models.csproj
CarePlatform.Models/Common/: ApiResponse.cs  CprsConstants.cs  TiuContext.cs  TiuDocument.cs
CarePlatform.Models/CoverSheet/: CoverSheetModels.cs
CarePlatform.Models/DCSumm/: DCSummModels.cs
CarePlatform.Models/Graphs/: GraphModels.cs
CarePlatform.Models/Labs/: LabModels.cs
CarePlatform.Models/Medications/: MedicationModels.cs
CarePlatform.Models/Patient/: PatientModels.cs
CarePlatform.Models/Reminders/: ReminderDialogRuntimeModels.cs  ReminderDialogWireParser.cs  ReminderModels.cs
CarePlatform.Models/Session/: SessionModels.cs
CarePlatform.Models/Surgery/: SurgeryModels.cs
CarePlatform.Models/User/: UserModels.cs
CarePlatform.Models/Vitals/: VitalModels.cs
CarePlatform.Models/WomensHealth/: WomensHealthModels.cs
CarePlatform.Security.VA.STSv2.Core/: CarePlatform.Security.VA.STSv2.Core.csproj  appsettings.Staging.json
CarePlatform.Security.VA.STSv2.Core/Controllers/: HomeController.cs  TestController.cs
app/: config.py  filemandate.py  main.py
dotnet/: CarePlatform.Data.CPRS.csproj  Dockerfile  Start-Demo.ps1  appsettings.Development.json  appsettings.Production.json  care-platform-data-vista.slnx
examples/: README.md  patient_summary.py  read_notes.py
(+283 files in other folders)
