[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careplatform-data-cprs"
version = "0.1.0"
description = "CarePlatform Data CPRS API — Python/FastAPI port"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
